Prevent long item names in the order form from overlapping their container element (fixes #142)

--- a/assets/sass/modules/materials.scss
+++ b/assets/sass/modules/materials.scss
@@ -29,6 +29,7 @@
 
         .material-item__label {
             margin-right: auto;
+            hyphens: auto; 
         }
 
         $btnHeight: 26px;
